--- a/src/index.html
+++ b/src/index.html
@@ -54,14 +54,17 @@
 
                 <!-- Content Start -->
                 <div class="h-[calc(600px-132px)] flex flex-col desktop:flex-1">
+                    <!-- Title Start -->
                     <div
                         class="text-center font-bold text-4xl mt-8 text-Very-dark-desaturated-blue desktop:text-left desktop:ml-[24px] desktop:mt-14">
                         <h1>FAQ</h1>
                     </div>
+                    <!-- Title End -->
+                    <!-- Description Start -->
                     <div
                         class="mx-6 mt-8 text-[12px] text-Very-dark-grayish-blue overflow-y-auto scrollbar flex-1 desktop:pr-20 ">
                         <ul class=" space-y-2 desktop:space-y-5">
-                            <li class="border-b border-Light-grayish-blue py-2">
+                            <li class="border-b border-Light-grayish-blue py-2" onclick="onRotate(this)">
                                 <details class="open:font-[700] open:text-Very-dark-desaturated-blue">
                                     <summary
                                         class="list-none hover:font-[700] hover:text-Soft-red hover:cursor-pointer ">
@@ -85,7 +88,7 @@
                                     </div>
                                 </details >
                             </li>
-                            <li class="border-b border-Light-grayish-blue py-2">
+                            <li class="border-b border-Light-grayish-blue py-2" onclick="onRotate(this)">
                                 <details class="open:font-[700] open:text-Very-dark-desaturated-blue">
                                     <summary
                                         class="list-none hover:font-[700] hover:text-Soft-red hover:cursor-pointer">
@@ -108,7 +111,7 @@
                                     </div>
                                 </details >
                             </li>
-                            <li class="border-b border-Light-grayish-blue py-2">
+                            <li class="border-b border-Light-grayish-blue py-2" onclick="onRotate(this)">
                                 <details class="open:font-[700] open:text-Very-dark-desaturated-blue">
                                     <summary
                                         class="list-none hover:font-[700] hover:text-Soft-red hover:cursor-pointer">
@@ -132,7 +135,7 @@
                                     </div>
                                 </details>
                             </li>
-                            <li class="border-b border-Light-grayish-blue py-2">
+                            <li class="border-b border-Light-grayish-blue py-2" onclick="onRotate(this)">
                                 <details class="open:font-[700] open:text-Very-dark-desaturated-blue">
                                     <summary
                                         class="list-none hover:font-[700] hover:text-Soft-red hover:cursor-pointer">
@@ -155,7 +158,7 @@
                                     </div>
                                 </details>
                             </li>
-                            <li class="border-b border-Light-grayish-blue py-2">
+                            <li class="border-b border-Light-grayish-blue py-2" onclick="onRotate(this)">
                                 <details class="open:font-[700] open:text-Very-dark-desaturated-blue">
                                     <summary
                                         class="list-none hover:font-[700] hover:text-Soft-red hover:cursor-pointer">
@@ -187,11 +190,12 @@
     <footer>
         <div class="absolute bottom-0 w-screen text-center text-white">
             Challenge by
-            <a
+            <a  class="text-black"
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="https://github.com/Lunaciaa">Hacalios</a>.
+            >. Coded by <a class="text-black" href="https://github.com/Lunaciaa">Hacalios</a>.
         </div>
     </footer>
+    <script src="/src/script.js"></script>
 </html>
