Change src folder to root

--- a/index.html
+++ b/index.html
@@ -197,5 +197,5 @@
             >. Coded by <a class="text-black" href="https://github.com/Lunaciaa">Hacalios</a>.
         </div>
     </footer>
-    <script src="/src/script.js"></script>
+    <script src="script.js"></script>
 </html>
