--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="/dist/output.css" />
+        <link rel="stylesheet" href="./dist/output.css" />
 
         <title>Frontend Mentor | FAQ Accordion Card</title>
     </head>
@@ -27,26 +27,26 @@
                 <div class="relative overflow-visible h-[100px] desktop:flex-1 ">
                     <img
                         class="hidden desktop:block desktop:absolute desktop:top-[200px] desktop:-left-[116px] z-50"
-                        src="/images/illustration-box-desktop.svg"
+                        src="./images/illustration-box-desktop.svg"
                         alt="" />
                     <picture class="">
                         <source
                             media="(min-width: 1440px)"
                             srcset="
-                                /images/illustration-woman-online-desktop.svg
+                                ./images/illustration-woman-online-desktop.svg
                             " />
                         <img
                             class="absolute -top-20 left-16 w-[198px] h-[150px] desktop:w-fit desktop:h-fit desktop:top-20 desktop:-left-16 z-10"
-                            src="/images/illustration-woman-online-mobile.svg"
+                            src="./images/illustration-woman-online-mobile.svg"
                             alt="" />
                     </picture>
                     <picture class="absolute top-3 left-16 desktop:-top-5 desktop:-left-28 z-0">
                         <source
                             media="(min-width: 1440px)"
-                            srcset="/images/bg-pattern-desktop.svg" />
+                            srcset="./images/bg-pattern-desktop.svg" />
                         <img
                             class="w-[198px] desktop:w-auto desktop:h-[500px]"
-                            src="/images/bg-pattern-mobile.svg"
+                            src="./images/bg-pattern-mobile.svg"
                             alt="" />
                     </picture>
                 </div>
@@ -73,7 +73,7 @@
                                             <span>
                                                 <img
                                                     class="inline-block"
-                                                    src="/images/icon-arrow-down.svg"
+                                                    src="./images/icon-arrow-down.svg"
                                                     alt="" />
                                             </span>
                                         </h2>
@@ -97,7 +97,7 @@
                                             <span
                                                 ><img
                                                     class="inline-block"
-                                                    src="/images/icon-arrow-down.svg"
+                                                    src="./images/icon-arrow-down.svg"
                                                     alt=""
                                             /></span>
                                         </h2>
@@ -120,7 +120,7 @@
                                             <span
                                                 ><img
                                                     class="inline-block"
-                                                    src="/images/icon-arrow-down.svg"
+                                                    src="./images/icon-arrow-down.svg"
                                                     alt=""
                                             /></span>
                                         </h2>
@@ -144,7 +144,7 @@
                                             <span
                                                 ><img
                                                     class="inline-block"
-                                                    src="/images/icon-arrow-down.svg"
+                                                    src="./images/icon-arrow-down.svg"
                                                     alt=""
                                             /></span>
                                         </h2>
@@ -167,7 +167,7 @@
                                             <span
                                                 ><img
                                                     class="inline-block"
-                                                    src="/images/icon-arrow-down.svg"
+                                                    src="./images/icon-arrow-down.svg"
                                                     alt=""
                                             /></span>
                                         </h2>
